dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app 
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: node-app
        image: paramahub/myapps:13
        imagePullPolicy: "Always"
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - '-c'
                - sleep 10s
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

            
---

apiVersion: v1
kind: Service
metadata:
  name: node-app-service

spec:
  selector:
    app: node-app 
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
